scss/resonate.scss
#resonate {
    .header, .body {
        padding: 0 1rem;
        @media #{$medium-only} {
            padding: 0 3rem;
        }
    }

    .logo {
        height: 3rem;
        margin-top: 2rem;
    }


    .paperclip {
        @media #{$large-up} {
            $height: 50rem;
            height: $height;
            // right: 4rem;
            margin-left: 25rem;
            margin-top: -(881/1914) * $height + 2rem;
        }
        @media #{$medium-only} {
            right: 2rem;
            $height: 20rem;
            height: $height;
            margin-top: -(881/1914) * $height + 2rem;
        }
        position: absolute;
        z-index: 200;
    }
    @media #{$small-only} {
        .paperclip {
            display: none;
        }
    }

    .header {
        color: white;
        background: $main-color url(../img/bg.jpg) no-repeat;
        background-size: 100%;
        background-attachment: fixed;
        .content {
            @include grid-row();
            padding-bottom: 2rem;
        }

        .hero-content {
            z-index: 300;
            position: relative;
        }

        h1 {
            color: white;
            margin-top: 16rem;
            @media #{$small-only} { margin-top: 2rem; }
            @media #{$medium-only} { margin-top: 8rem; }
            font-weight: 700;
            max-width: 25rem;
        }
    }

    .email-field, .name-field {
        max-width: 20rem;
    }

    .body {
        .content {
            padding-top: 4rem;
            @include grid-row();
            .intro {
                max-width: $content-width - 80px;
            }
        }
    }

    .footer {
        margin-top: 4rem;
        background: $secondary-color;
        padding: 2rem;
        .content {
            @include grid-row();
            color: white;
            h4 {
                color: white;
            }
            a {
                color: white !important;
                text-decoration: underline;
            }
        }
    }
}

